# yfinance_topix500_verification

./: .gitignore  README.md  check_project.py  debug_double_shares.py  debug_hidden_addition.py  debug_trading_flow.py  fix_issues_now.py  fix_portfolio_duplicate_buy.py  fix_position_duplicate_shares.py  main.py  pyproject.toml  quickstart.py  requirements.txt  run_backtest.bat  run_backtest.py  run_simple_fix.py  run_topix500_backtest.bat  test_addition_behavior.py  yfinance_check_results.json  yfinance_topix500_verification.py
config/: addition_test.yaml  config.yaml  fixed_config.yaml  minimal_debug.yaml  quickstart_config.yaml  simple_config.yaml  test_fixed.yaml  topix500_full_config.yaml
data/cache_minimal/: dividend_7203.pkl  price_7203_2023-03-20_2023-04-30.pkl
data/results/: backtest_report_20250611_193137.html  backtest_report_20250611_193137.txt  backtest_report_20250612_095434.html  backtest_report_20250612_095434.txt  metrics_20250611_193136.json  metrics_20250612_095434.json  metrics_20250612_115344.json  portfolio_20250611_193136.csv  portfolio_20250612_095434.csv  portfolio_20250612_105021.csv  (+4 more)
docs/: README.md  api_reference.md  documentation.md  execution_guide.md  hidden_addition_issue.md  implementation_plan.md  project_summary.md  setup_guide.md  topix500_backtest_specification.md
scripts/: README.md  analyze_trading_pairs.py  check_project.py  diagnose_issues.py  fix_script_paths.py  run_quick_test.py  verify_adjustments.py  yfinance_verification.py
src/: __init__.py
tests/: test_calendar.py  test_position_manager.py  test_strategy.py
(+73 files in other folders)
