[project]
name = "yfinance-topix500-verification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.0",
    "jpholiday>=0.1.8",
    "loguru>=0.6.0",
    "markdown>=3.4.0",
    "matplotlib>=3.6.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "plotly>=5.11.0",
    "psutil>=5.9.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.21.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "ruff>=0.11.13",
    "seaborn>=0.12.0",
    "sqlalchemy>=2.0.0",
    "typing-extensions>=4.5.0",
    "yfinance>=0.2.18",
]
